# vectur

./: .gitignore  README.md  VAST_INSTRUCTIONS.md  pyproject.toml  vash_setup.sh  vast_setup.sh
code/: eval.py  experiment_manager.py  fine_tune.py  llama_macro.py  lora_utils.py  run_experiments.py  train.py  unstuck_graph.py
code/.experiment_manager/stage_configs/: attention_clrs_m__dry_run_train.json  attention_compgen_m__dry_run_train.json  attention_compgenft_m__dry_run_train.json  attention_fineweb_m__dry_run_train.json  lstm_clrs_m__dry_run_train.json  lstm_compgen_m__dry_run_train.json  lstm_compgenft_m__dry_run_train.json  lstm_fineweb_m__dry_run_train.json  ntm_clrs_m__dry_run_train.json  ntm_compgen_m__dry_run_train.json  ntm_compgenft_m__dry_run_train.json  ntm_fineweb_m__dry_run_train.json  vecstur_clrs_m__dry_run_train.json  vecstur_compgen_m__dry_run_train.json  vecstur_compgenft_m__dry_run_train.json  vecstur_fineweb_m__dry_run_train.json  vecstur_randomized_m__dry_run_train.json  vectur_clrs_m__dry_run_train.json  vectur_compgen_m__dry_run_train.json  vectur_compgenft_m__dry_run_train.json  vectur_fineweb_m__dry_run_train.json  vectur_randomized_m__dry_run_train.json
code/blocks/: __init__.py  attention_block.py  lstm_block.py  moneta_block.py  ntm_block.py  registry.py  vectur_block.py
code/experiments/: README.md  work_graph.json
datasets/: __init__.py  compgen.py
manual_evals/attention_clrs_s/: eval_config.json
paper/: definitions.tex  neurips_2024.sty  paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
vast/: entrypoint.sh
